Fix overlapping text of checkbox

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -68,6 +68,10 @@ sup {
     margin-bottom: 0;
   }
 
+  .row-margin {
+    margin-bottom: 20px;
+  }
+
   .card-content {
     padding: 10px 20px 20px 20px;
   }
